@@ -12,4 +12,5 @@ t/10_forker.t
 t/11_dashes.t
 t/12_rsh.t
 t/13_jobs.t
+t/20_nochld.t
 t/test_utils.pl
