@@ -2,6 +2,11 @@ Revision history for Perl extension Parallel::Forker
 
 The contributors that suggested a given feature are shown in [].
 	
+* Parallel::Forker 1.214 2007/2/1
+
+****    Fix hang in applications that call poll without sig_child.
+	This broke in 1.212 and 1.213. [Venkataramana Mokkapati]
+
 * Parallel::Forker 1.213 2007/1/28
 
 ****    Internal refactoring of poll and wait_all routines.
@@ -44,7 +49,7 @@ The contributors that suggested a given feature are shown in [].
 **	First created
 
 ----------------------------------------------------------------------
-$Id: Changes 30901 2007-01-26 14:16:58Z wsnyder $
+$Id: Changes 31189 2007-02-01 14:59:35Z wsnyder $
 DESCRIPTION: Documentation on change history for this package
 ----------------------------------------------------------------------
 
